# lox

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/: api.rst  conf.py  examples.md  index.md  index.rst  quick_start.md  requirements.txt  test.py  the_sharp_bits.md
docs/_templates/autosummary/: class.rst
docs/api/: loggers.rst  wandb.rst
docs/examples/: live_plotting.md  parameter_estimation.md
docs/source/: lox.rst  lox.wandb.rst
lox/: __init__.py  logdict.py  logger.py  nolog.py  primitive.py  save.py  spool.py  spooling.py  string.py  tap.py  typing.py  util.py  utils.py
lox/loggers/: __init__.py  console_logger.py  logger.py  multi_logger.py  save_logger.py
lox/wandb/: __init__.py  core.py  init.py  logger.py  run.py  runs.py  wandb_logger.py
tests/: test_logdict.py  test_logger.py  test_save.py  test_spool.py  test_tap.py
tests/loggers/: functions.py  test_logger.py  test_save_logger.py
