[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lox"
version = "0.1.0"
description = "Logging library for JAX that compatible with transformations such as jit and vmap."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "huterguier", email = "huterguier@gmail.com" }
]
dependencies = [
  "jax>=0.6.0",
  "wandb>=0.20.1",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
cuda = ["jax[cuda12]>=0.6.0"]
testing = [
  "absl-py",
]
docs = [
  "matplotlib",
]

[project.urls]
Homepage = "https://github.com/huterguier/lox"

[tool.setuptools.packages.find]
include = ["lox", "lox.*"]
exclude = ["images"]
